# joyous-departures

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  test-python.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml  release.yml
.specify/memory/: constitution.md
_archive/: Cargo.toml
_archive/bindings/python/: Cargo.toml  README.md
_archive/bindings/python/joyous_departures/: __init__.py
_archive/bindings/typescript/: Cargo.toml  pnpm-workspace.yaml  test-cli.mjs  vitest.config.ts
_archive/bindings/typescript/src/: lib.rs
_archive/joy-generator/benches/: generate_bench.rs
_archive/joy-generator/src/: corpus.rs  emoji.rs  generate.rs  template.rs
_archive/joy-generator/tests/unit/: date_time_integration_test.rs  generate_test.rs
bindings/python/: Cargo.toml  MANIFEST.in  pyproject.toml
bindings/python/joy_goodbye/: __init__.py
bindings/python/joyous_departures/: __init__.py
bindings/python/scripts/: build-wheel.sh
bindings/python/src/: lib.rs
bindings/python/tests/: test_e2e.py
bindings/typescript/: .npmrc  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-cli.mjs  tsconfig.json  tsdown.config.ts  vitest.config.ts
bindings/typescript/scripts/: build-package.sh
bindings/typescript/src/: index.d.ts  index.ts  lib.rs
bindings/typescript/tests/: e2e.test.ts
corpus/: en-GB.txt
examples/: .env.local.example  README.md
examples/py-usage/: README.md  main.py  pyproject.toml  setup_local.py
examples/py-usage/tests/: test_example.py
examples/ts-usage/: README.md  index.ts  package.json  pnpm-lock.yaml  setup_local.sh  tsconfig.json
examples/ts-usage/tests/: cloudflare-workers.test.ts  example.test.ts
joy-generator/: Cargo.toml
joy-generator/benches/: generate_bench.rs
joy-generator/src/: corpus.rs  datetime.rs  emoji.rs  error.rs  generate.rs  lib.rs  options.rs  template.rs
joy-generator/tests/unit/: corpus_test.rs  datetime_test.rs  emoji_test.rs  generate_test.rs  mod.rs  template_test.rs
scripts/: bench.sh  build.sh  generate-corpus.ts  get-version.sh  lint.sh  publish.sh  setup-git-hooks.sh  test-typescript.sh  test.sh  update-versions.sh  version.sh
specs/001-goodbye-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-goodbye-generator/checklists/: requirements.md
specs/001-goodbye-generator/contracts/: python-api.md  rust-api.md  typescript-api.md
specs/002-multi-binding-architecture/: plan.md  spec.md  tasks.md
specs/002-multi-binding-architecture/checklists/: requirements.md
specs/002-multi-binding-architecture/research/: RESEARCH_SUMMARY.md  architecture-recommendations.md  cloudflare-workers-wasm-loading.md  core-definition-patterns.md  error-handling-patterns.md  multi-binding-patterns.md
specs/003-native-dual-lib/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-native-dual-lib/checklists/: requirements.md
specs/003-native-dual-lib/contracts/: python.pyi  typescript.d.ts
