[workspace]
members = [
    "joy-generator",
    "bindings/python",
    "bindings/typescript",
]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
authors = ["siviter.xyz"]
license = "MIT"
repository = "https://github.com/siviter-xyz/joyous-departures"

[workspace.dependencies]
# Core dependencies
lz4 = "1.25"
chrono-tz = "0.9"
thiserror = "2.0"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
maturin = "1.7"

# TypeScript/WASM bindings
wasm-bindgen = "0.2"
wasm-pack = "0.13"

