[workspace]
members = [
    "joy-generator",
    "bindings/python",
    "bindings/typescript",
]
resolver = "2"

[workspace.package]
version = "1.6.3"
edition = "2021"
authors = ["siviter.xyz"]
license = "MIT"
repository = "https://github.com/siviter-xyz/joyous-departures"

[workspace.dependencies]
# Core dependencies
lz4 = "1.25"
chrono-tz = "0.9"
thiserror = "2.0"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
maturin = "1.7"

# TypeScript/WASM bindings
wasm-bindgen = "0.2"

# Build tools (binary tools, not library dependencies):
# - wasm-bindgen-cli: Install via `cargo install wasm-bindgen-cli --version 0.2.106`
# - wasm-opt: Install via `cargo install wasm-opt --version 0.116.1`
# These are documented here for version tracking but installed via cargo install

