[package]
name = "joy-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Rust library for generating warm, heartfelt goodbye messages"

[lib]
name = "joy_generator"
path = "src/lib.rs"

[dependencies]
lz4.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generate_bench"
harness = false

