[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "joyous-departures"
# Version is managed by semantic-release and updated via scripts/update-versions.sh
# For local development, this can be set manually or extracted from git tags
version = "1.6.0"
description = "Generate warm, heartfelt goodbye messages for email templates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "siviter.xyz" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/siviter-xyz/joyous-departures"
Repository = "https://github.com/siviter-xyz/joyous-departures"

[tool.maturin]
features = ["pyo3/extension-module"]
# The Rust extension module is joy_generator, but we want it as a submodule of joyous_departures
# This creates joyous_departures._joy_generator as the extension module
module-name = "joyous_departures._joy_generator"
# Python source is in the current directory (joyous_departures package)
python-source = "."
# Explicitly include the package directory in source distribution
sdist-include = ["joyous_departures/**/*.py"]

