[package]
name = "joyous-departures-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for joyous-departures message generator"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
joy-generator = { path = "../../joy-generator" }
wasm-bindgen.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

