[package]
name = "joyous-departures-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for joyous-departures message generator"

[lib]
name = "joyous_departures"
crate-type = ["cdylib"]

[dependencies]
joy-generator = { path = "../../joy-generator" }
pyo3.workspace = true

